--- a/StorageBuffer/MainWindow.xaml
+++ b/StorageBuffer/MainWindow.xaml
@@ -6,15 +6,6 @@
         xmlns:local="clr-namespace:StorageBuffer"
         mc:Ignorable="d"
         Title="MainWindow" Height="989" Width="1280" ResizeMode="NoResize">
-    <Window.Resources>
-        <Style TargetType="{x:Type TabItem}">
-            <Style.Triggers>
-                <Trigger Property="IsSelected" Value="False">
-                    <Setter Property="Background" Value="#2F2F2F"></Setter>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-    </Window.Resources>
     <Grid>
         <Rectangle Fill="#A8A1A2" HorizontalAlignment="Left" Height="960" VerticalAlignment="Top" Width="280"/>
         <Image Width="221" Margin="30,10,1023,819" Source="StorageBufferLogoTextAllWhite.png" Stretch="Uniform"/>
@@ -39,6 +30,14 @@
                                     <Trigger Property="IsSelected" Value="False">
                                         <Setter TargetName="Panel" Property="Background" Value="#A8A1A2" />
                                     </Trigger>
+                                    <MultiTrigger>
+                                        <MultiTrigger.Conditions>
+                                            <Condition Property="IsSelected" Value="False"></Condition>
+                                            <Condition Property="IsMouseOver" Value="True"></Condition>
+                                        </MultiTrigger.Conditions>
+                                        <Setter TargetName="Panel" Property="Cursor" Value="Hand" />
+                                        <Setter TargetName="Panel" Property="Background" Value="#887e80" />
+                                    </MultiTrigger>
                                 </ControlTemplate.Triggers>
                             </ControlTemplate>
                         </Setter.Value>
