--- a/StorageBuffer/MainWindow.xaml
+++ b/StorageBuffer/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StorageBuffer"
         mc:Ignorable="d"
-        Title="MainWindow" Height="989" Width="1280" ResizeMode="NoResize">
+        Closing="MainWindow_OnClosing"
+        Title="Storage Buffer" Height="989" Width="1280" ResizeMode="NoResize">
     <Grid>
         <Rectangle Fill="#A8A1A2" HorizontalAlignment="Left" Height="960" VerticalAlignment="Top" Width="280"/>
         <Image Width="221" Margin="30,10,1023,819" Source="StorageBufferLogoTextAllWhite.png" Stretch="Uniform"/>
@@ -57,7 +58,7 @@
 
                     <TextBox Name="tbSearchBar" Text="navn, ordrenummer, varenummer..." Foreground="#A8A1A2" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="50" Margin="0,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="735" PreviewMouseDown="tbInactive_OnMouseDown" TextChanged="TbSearchBar_TextChanged"/>
                     <Label Content="Søg" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120"/>
-                    <ListView Name="lvResult" HorizontalAlignment="Left" Height="790" Margin="0,108,0,0" VerticalAlignment="Top" Width="932">
+                    <ListView  Name="lvResult" HorizontalAlignment="Left" Height="790" Margin="0,108,0,0" VerticalAlignment="Top" Width="932">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="Type" DisplayMemberBinding="{Binding Type}" />
@@ -66,6 +67,11 @@
                                 <GridViewColumn Header="Data" DisplayMemberBinding="{Binding Data}" />
                             </GridView>
                         </ListView.View>
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <EventSetter Event="PreviewMouseLeftButtonDown" Handler="EventSetter_OnHandler"/>
+                            </Style>
+                        </ListView.ItemContainerStyle>
                     </ListView>
                     <!--<Rectangle Fill="#FFF" HorizontalAlignment="Left" Height="790" Margin="0,108,0,0" Stroke="#A8A1A2" VerticalAlignment="Top" Width="932"/>
 
