--- a/StorageBuffer/MainWindow.xaml
+++ b/StorageBuffer/MainWindow.xaml
@@ -56,7 +56,7 @@
                         <ComboBoxItem>Kunder</ComboBoxItem>
                     </ComboBox>
 
-                    <TextBox Name="tbSearchBar" Text="navn, ordrenummer, varenummer..." Foreground="#A8A1A2" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="50" Margin="0,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="735" PreviewMouseDown="tbInactive_OnMouseDown" TextChanged="TbSearchBar_TextChanged"/>
+                    <TextBox Name="tbSearchBar" Text="navn, telefonnummer, ordrenavn, varenavn..." Foreground="#A8A1A2" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="50" Margin="0,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="735" PreviewMouseDown="tbInactive_OnMouseDown" TextChanged="TbSearchBar_TextChanged"/>
                     <Label Content="Søg" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120"/>
                     <ListView  Name="lvResult" HorizontalAlignment="Left" Height="790" Margin="0,108,0,0" VerticalAlignment="Top" Width="932">
                         <ListView.View>
