--- a/StorageBuffer/OrderWindow.xaml
+++ b/StorageBuffer/OrderWindow.xaml
@@ -28,9 +28,13 @@
                                     <ControlTemplate.Triggers>
                                         <Trigger Property="IsMouseOver" Value="True">
                                             <Setter TargetName="Panel" Property="Background" Value="#887e80"/>
+                                            <Setter TargetName="Panel" Property="Cursor" Value="Hand"/>
                                         </Trigger>
                                         <Trigger Property="IsMouseOver" Value="False">
                                             <Setter TargetName="Panel" Property="Background" Value="#A8A1A2"/>
+                                        </Trigger>
+                                        <Trigger Property="IsPressed" Value="True">
+                                            <Setter TargetName="Panel" Property="Background" Value="#2F2F2F"/>
                                         </Trigger>
                                     </ControlTemplate.Triggers>
                                 </ControlTemplate>
@@ -56,9 +60,13 @@
                                     <ControlTemplate.Triggers>
                                         <Trigger Property="IsMouseOver" Value="True">
                                             <Setter TargetName="Panel" Property="Background" Value="#887e80"/>
+                                            <Setter TargetName="Panel" Property="Cursor" Value="Hand"/>
                                         </Trigger>
                                         <Trigger Property="IsMouseOver" Value="False">
                                             <Setter TargetName="Panel" Property="Background" Value="#A8A1A2"/>
+                                        </Trigger>
+                                        <Trigger Property="IsPressed" Value="True">
+                                            <Setter TargetName="Panel" Property="Background" Value="#2F2F2F"/>
                                         </Trigger>
                                     </ControlTemplate.Triggers>
                                 </ControlTemplate>
@@ -84,15 +92,52 @@
                     <ComboBoxItem>Paid</ComboBoxItem>
                     <ComboBoxItem>Canceled</ComboBoxItem>
                 </ComboBox>
-                <ListView Name="lvResult" FontSize="20" HorizontalAlignment="Left" Height="790" Margin="0,108,0,0" VerticalAlignment="Top" Width="932">
+                <ListView Name="lvResult" FontSize="20" HorizontalAlignment="Left" Height="716" Margin="0,108,0,0" VerticalAlignment="Top" Width="932">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn Header="Id" DisplayMemberBinding="{Binding Id}" />
-                            <GridViewColumn Header="Navn" DisplayMemberBinding="{Binding Name}" />
-                            <GridViewColumn Header="Antal" DisplayMemberBinding="{Binding Data}" />
+                            <GridViewColumn Header="Id" DisplayMemberBinding="{Binding MaterialId}" />
+                            <GridViewColumn Header="Navn" DisplayMemberBinding="{Binding MaterialName}" />
+                            <GridViewColumn Header="Antal" DisplayMemberBinding="{Binding Quantity}" />
                         </GridView>
                     </ListView.View>
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <EventSetter Event="PreviewMouseLeftButtonDown" Handler="EventSetter_OnHandler"/>
+                        </Style>
+                    </ListView.ItemContainerStyle>
                 </ListView>
+                <Button Name="AddMaterial" FontSize="20" Content="Tilføj" HorizontalAlignment="Right" Margin="0,850,0,0" VerticalAlignment="Top" Width="280" Height="50" Click="AddMaterial_Click">
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Foreground" Value="White" />
+                            <Setter Property="Background" Value="#A8A1A2"/>
+                            <Setter Property="BorderThickness" Value="0"/>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Grid x:Name="Panel">
+                                            <ContentPresenter x:Name="ContentSite"
+                                            VerticalAlignment="Center"
+                                            HorizontalAlignment="Center"/>
+                                        </Grid>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter TargetName="Panel" Property="Background" Value="#887e80"/>
+                                                <Setter TargetName="Panel" Property="Cursor" Value="Hand"/>
+                                            </Trigger>
+                                            <Trigger Property="IsMouseOver" Value="False">
+                                                <Setter TargetName="Panel" Property="Background" Value="#A8A1A2"/>
+                                            </Trigger>
+                                            <Trigger Property="IsPressed" Value="True">
+                                                <Setter TargetName="Panel" Property="Background" Value="#2F2F2F"/>
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </Button.Resources>
+                </Button>
 
             </Grid>
         </Grid>
