--- a/StorageBuffer/MainWindow.xaml
+++ b/StorageBuffer/MainWindow.xaml
@@ -114,7 +114,7 @@
                 </Grid>
             </TabItem>
 
-            <TabItem Header="Indskriv Vare" Foreground="White" Width="280" Height="50"  FontSize="20" BorderThickness="0" Margin="-2,146,2,-146" >
+            <TabItem Header="Indskriv Materiale" Foreground="White" Width="280" Height="50"  FontSize="20" BorderThickness="0" Margin="-2,146,2,-146" >
                 <Grid Background="#FFF" Margin="26,28,30,30">
                     <Label Content="Navn" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120"/>
                     <TextBox Name="tbCreateMaterialName" Text="f.eks. Lars Larsen" Foreground="#A8A1A2" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="50" Margin="0,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="750" PreviewMouseDown="tbInactive_OnMouseDown" TextChanged="TbSearchBar_TextChanged"/>
